Add first recipe and corresponding folder
Recipe for pancakes was added.
Folder for further recipes was created.
Relative link to recipe was included in index file.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 	<body>
 		<h2>Odin Recipes</h2>
 		<p> </p>
-		<p>This is the index page of my final project.</p>
+		<p>This is the index page of my first project.</p>
+
+
+		<ol>
+			<li> <a href = "./Recipes/Pancakes.html">Millenia Pancakes</a></li>
+		</ol>
+
 
 	</body>
 </html>
