Add pictures and corresponding folder to project

--- a/Recipes/Pancakes.html
+++ b/Recipes/Pancakes.html
@@ -7,6 +7,12 @@
 	<body>
 		<h2>Pancakes</h2>
 		<p> </p>
+		<img src = "../Images/PancakesJ.jpg" alt = "Nice looking stacks">
+		
+		<!-- Okay, so I have two different pictures for  pancakes -->
+		<!-- They both work online, even though the one I'm not using doesn't open on my computer -->
+		<!-- That's not the reason for not using it though, this one's just better -->
+
 		<p>Many generations have added to and gained strength from this recipe</p>
 		<p>Wars have been fought. Epic battles that shook the sky and <strong><em>kitchenware</em></strong></p>
 		<p>Spies and assasins, have come for it.</p>
