Add additional recipe. Add links back to index

--- a/Recipes/Pancakes.html
+++ b/Recipes/Pancakes.html
@@ -6,6 +6,7 @@
 	</head>
 	<body>
 		<h2>Pancakes</h2>
+		<a href = "../index.html">Index Page</a>
 		<p> </p>
 		<img src = "../Images/PancakesJ.jpg" alt = "Nice looking stacks">
 		
