--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 
 		<ol>
-			<li> <a href = "./Recipes/Pancakes.html">Millenia Pancakes</a></li>
+			<li> <a href = "./Recipes/Pancakes.html">Millenia Pancakes</a> </li>
+			<li> <a href = "./Recipes/DeviledEggs.html">Random Deviled Eggs</a> </li>
 		</ol>
 
 
