modify html files to use css stylesheets

--- a/Recipes/DeviledEggs.html
+++ b/Recipes/DeviledEggs.html
@@ -2,6 +2,7 @@
 <html lang = "en">
 	<head>
 		<meta charset = "UTF-8">
+		<link rel = "stylesheet" href = "../StyleSheets/Recipie_Standard.css">
 		<title>Deviled Eggs</title>
 	</head>
 	<body>
